# swe-kitty

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
.conduit/: README.md  config.toml  env.example
Conduit_Handoff/: APP_PLATFORMS.md  BRAND.md  CLAUDE_CODE_PROMPT.md  COPY_DECK.md  MIGRATION_PLAN.md  README.md  RENAME_MAP.md
agents/: claude.toml  codex.toml
broker/: Makefile  go.mod  go.sum
core/: Cargo.toml  build.rs
core/examples/: cli-driver.rs
core/src/: conduit_core.udl  conversation.rs  discovery.rs  lib.rs  session.rs  swe_kitty_core.udl  transport.rs  views.rs
core/src/saved/: mod.rs
core/src/ssh/: bootstrap.rs  connect.rs  mod.rs  port_forward.rs  types.rs
core/src/store/: mod.rs
core/tests/: protocol_roundtrip.rs  store_reducer.rs
docs/: AGENT-ADAPTERS.md  ARCHITECTURE.md  BROKER-REDEPLOY.md  CHAT-CHANNEL.md  CONDUIT-REBRAND.md  FINISH-PLAN.md  INSTALL-ANDROID.md  INSTALL-IOS.md  MEMORY-FORMAT.md  MOBILE-FEATURE-BACKLOG.md  MOBILE-MIGRATION-PLAN.md  MOBILE-PORT-MATRIX.md  NEON-CORE-FIELDS.md  NEXT-RELEASE.md  PLAN-2026-05-19.md  PLAN-AGENT-OAUTH.md  PLAN-CHAT-CHANNEL.md  PLAN-DEVICE-BUGS-2026-05-24.md  PLAN-LITTER-UI.md  PLAN-LITTER-VISUAL-PARITY.md  PLAN-TERMINAL-REWRITE.md  PLAN-TERMINAL-SIDECAR.md  PLAN-TERMINAL-XTERMJS.md  PLAN.md  RELEASE-IOS.md  RELEASE-TESTFLIGHT.md  RELEASE.md  RENAMING-broker.md  ROADMAP.md  SELF-HOST.md  SENTRY-OPS.md  SENTRY.md  SESSION-LIFECYCLE.md  SLASH-COMMANDS.md  TESTING-STRATEGY.md  WEBSOCKET-PROTOCOL.md
harness/: Makefile  go.mod  go.sum
scripts/: cut-release.sh  install.sh  (+4 more)
(+735 files in other folders)
