[package]
name = "swe-kitty-core"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Shared Rust core for the swe-kitty mobile apps (iOS + Android)."

[lib]
name = "swe_kitty_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
uniffi = { version = "0.28", features = ["cli", "tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
thiserror = "1"
async-trait = "0.1"
url = "2"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
russh = "0.45"
russh-keys = "0.45"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "test-util"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"

[[example]]
name = "cli-driver"
path = "examples/cli-driver.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
